refactor: remove imageUrl from destination model
