# server/seeders/20231121022717-demo-destination.js
@@ -7,7 +7,6 @@ module.exports = {
         {
           destination_id: '053bde30-1de9-32b3-9053-b8abf4f4e28f',
           destination_name: 'Sit quasi autem.',
-          image_url: 'http://www.heidenreich.biz/',
           city: 'New Demarco',
           description:
             'Autem non facere alias nostrum odio assumenda vel. Rerum velit cupiditate et dolor. Dolorem consequuntur repellendus doloribus earum eum id recusandae sit. Distinctio id enim recusandae.',
@@ -15,7 +14,6 @@ module.exports = {
         {
           destination_id: '06070df2-9f40-32fe-97cf-8fb23609f232',
           destination_name: 'Et et neque.',
-          image_url: 'http://www.doylehessel.info/',
           city: 'Lizethburgh',
           description:
             'Expedita omnis vel voluptatum et architecto. Nihil sed voluptatem quo voluptas et totam qui. Officia impedit delectus et non aut mollitia in. Possimus consectetur blanditiis quasi harum.',
@@ -23,7 +21,6 @@ module.exports = {
         {
           destination_id: '08479d74-c5f7-3cc5-bfd7-a69cd788abaa',
           destination_name: 'Sed recusandae.',
-          image_url: 'http://hartmann.com/',
           city: 'Weissnathaven',
           description:
             'Fugiat sed eligendi culpa voluptas omnis nam. Nobis sequi cupiditate veniam alias reprehenderit. Assumenda non est est mollitia eum eum. Quidem minima alias ipsam magnam est asperiores sit accusamus.',
@@ -31,7 +28,6 @@ module.exports = {
         {
           destination_id: '08838ac1-1627-360d-a8bb-a1b9760705f5',
           destination_name: 'Consequatur expedita et.',
-          image_url: 'http://kutch.org/',
           city: 'New Keith',
           description:
             'Ipsum reprehenderit est optio repellat. Qui nam est quis saepe quaerat. Aut occaecati a accusamus aperiam aut voluptatem aspernatur.',
@@ -39,7 +35,6 @@ module.exports = {
         {
           destination_id: '11dc0a9d-4a68-3c39-b08d-32e11125d4c7',
           destination_name: 'Voluptas vel.',
-          image_url: 'http://fritsch.com/',
           city: 'New Judsonland',
           description:
             'Incidunt voluptatem nostrum qui neque. Qui cumque repudiandae debitis. Soluta recusandae non et voluptas explicabo et et architecto. Autem voluptatem blanditiis deserunt non.',
@@ -47,7 +42,6 @@ module.exports = {
         {
           destination_id: '1f324bc3-0a96-3ac1-819a-a64efd3b8b6d',
           destination_name: 'Officia sequi eaque.',
-          image_url: 'http://jones.com/',
           city: 'New Abbeyberg',
           description:
             'Laborum repellat nulla eos voluptas itaque provident. A dolorem similique ad eos perferendis ratione accusamus et. Qui quo voluptatum ipsum aut velit corrupti aut.',
@@ -55,7 +49,6 @@ module.exports = {
         {
           destination_id: '2008d313-8ac8-3d68-9ec7-3f0c28fb54f9',
           destination_name: 'Quia ab.',
-          image_url: 'http://www.jakubowski.com/',
           city: 'East Carole',
           description:
             'Cumque temporibus voluptatum blanditiis quo fugiat minima ut. Magni qui quisquam quia corporis aut aut debitis. Aut minus nemo autem odit nihil qui nobis aspernatur. Dolor est quibusdam quo expedita quae esse quibusdam.',
@@ -63,7 +56,6 @@ module.exports = {
         {
           destination_id: '27e51858-c3c0-3e61-b1c3-f8a541c07d14',
           destination_name: 'Deleniti expedita et.',
-          image_url: 'http://harris.info/',
           city: 'West Virginiaport',
           description:
             'Corrupti voluptatem dignissimos fuga enim ea est eligendi. Maxime numquam eum officiis rerum id. Sunt sequi atque sint commodi eum eum. Culpa temporibus praesentium voluptas est.',
@@ -71,7 +63,6 @@ module.exports = {
         {
           destination_id: '2998ffc0-6f4b-35ef-9789-e36e0d5b46f0',
           destination_name: 'Error ad itaque.',
-          image_url: 'http://www.schimmelgreenfelder.com/',
           city: 'North Tommie',
           description:
             'Et enim quis quis mollitia reprehenderit voluptas. Veniam est eaque molestias velit eum suscipit rem. Rerum reiciendis eos ea laboriosam sint ratione. Aliquid voluptatum totam voluptatem fuga nulla.',
@@ -79,7 +70,6 @@ module.exports = {
         {
           destination_id: '32ed2bcc-24e9-3478-b4d2-eb128337ee22',
           destination_name: 'Aut officia.',
-          image_url: 'http://prohaska.com/',
           city: 'New Bridieview',
           description:
             'Fugit commodi sit quia et quis. Veniam deleniti libero pariatur modi eveniet rem. Qui id consequatur est magni. Deserunt beatae dicta at earum. Voluptatem et quaerat iure inventore tempora rerum soluta.',
@@ -87,7 +77,6 @@ module.exports = {
         {
           destination_id: '4abf6f51-25c5-319a-9f98-20251b7cb9c0',
           destination_name: 'Modi id necessitatibus.',
-          image_url: 'http://lemkenolan.net/',
           city: 'Janytown',
           description:
             'Et quia quo quia numquam quia dolor omnis. Ipsa unde fugiat ad provident excepturi magni harum. Neque qui non iste esse. Iure iure sit aspernatur perspiciatis voluptas.',
@@ -95,7 +84,6 @@ module.exports = {
         {
           destination_id: '67bdfccb-213f-3409-82e0-936c94a61088',
           destination_name: 'Ratione qui iusto.',
-          image_url: 'http://www.pfeffer.com/',
           city: 'Bergechester',
           description:
             'Quasi quis nulla qui delectus quam aut. Perspiciatis ad quo laboriosam quaerat voluptatibus. Commodi aliquid distinctio debitis in blanditiis saepe consectetur.',
@@ -103,7 +91,6 @@ module.exports = {
         {
           destination_id: '8cdaa0f8-0aa8-3be8-87ed-7d89bec84729',
           destination_name: 'Dolor cumque.',
-          image_url: 'http://schillerjohnson.com/',
           city: 'New Alba',
           description:
             'Atque eaque voluptatem inventore magnam id. Aperiam eos nesciunt cum dolores qui. Accusamus ab et inventore rerum.',
@@ -111,7 +98,6 @@ module.exports = {
         {
           destination_id: 'a338d1f7-7e6f-390d-83fd-23a605bab75d',
           destination_name: 'Et temporibus dolores.',
-          image_url: 'http://krajcik.org/',
           city: 'South Jadyn',
           description:
             'Nam praesentium omnis at ut voluptatum officiis. Id voluptas nihil distinctio rem est eos dolor. Aspernatur aliquid ratione in placeat.',
@@ -119,7 +105,6 @@ module.exports = {
         {
           destination_id: 'a5a9dc2f-c35d-3879-b5bc-ac2e96804d3d',
           destination_name: 'Et aut.',
-          image_url: 'http://www.brown.com/',
           city: 'Hanehaven',
           description:
             'Nobis animi rerum sit laborum. Nihil et veritatis architecto. Esse quam facilis sit similique dicta.',
@@ -127,7 +112,6 @@ module.exports = {
         {
           destination_id: 'bcb8d2f5-e61f-3eac-b454-a146e0e2916e',
           destination_name: 'Vitae voluptate.',
-          image_url: 'http://www.mccullough.com/',
           city: 'Port Abby',
           description:
             'Repudiandae nemo eaque vel reprehenderit. Eligendi non accusantium ipsam dignissimos omnis provident. Commodi et et cum dolorum occaecati aliquid nisi. Inventore occaecati quis a numquam inventore et.',
@@ -135,7 +119,6 @@ module.exports = {
         {
           destination_id: 'bee15ced-68ac-32ef-917c-85e70b7272c3',
           destination_name: 'Facere eum quia.',
-          image_url: 'http://wyman.com/',
           city: 'North Lavern',
           description:
             'Et autem incidunt autem mollitia necessitatibus tempore. Distinctio odit minus dolores voluptas saepe. Quisquam et qui quis sint est.',
@@ -143,7 +126,6 @@ module.exports = {
         {
           destination_id: 'd6e23a13-e227-3df0-b621-6d1a6e1d6d78',
           destination_name: 'Iusto possimus beatae.',
-          image_url: 'http://www.ankunding.net/',
           city: 'Bartellfort',
           description:
             'Aut tempore et dolores dolorem praesentium dolor. Officiis unde ipsam voluptatem sit voluptate exercitationem. Asperiores et magnam asperiores perspiciatis sit.',
@@ -151,7 +133,6 @@ module.exports = {
         {
           destination_id: 'de74ddb8-0b8d-35ee-82d5-af5f29d3fe3a',
           destination_name: 'Quae aliquam incidunt.',
-          image_url: 'http://feil.net/',
           city: 'Jamalborough',
           description:
             'Sunt sint quasi deserunt rerum porro in. Excepturi harum voluptatem ducimus maxime. Quam voluptatum incidunt quia eos ipsam et.',
@@ -159,7 +140,6 @@ module.exports = {
         {
           destination_id: 'e9d9f4c1-1b50-3af6-8106-ab5d9c53644a',
           destination_name: 'Harum nesciunt eaque.',
-          image_url: 'http://www.rempel.biz/',
           city: 'Lake Destinifurt',
           description:
             'Quod dicta velit labore consectetur temporibus odit numquam. Nisi deserunt odit facilis nihil. Et eum aut incidunt dolores velit consequatur. Reprehenderit suscipit alias quod ab.',
